[gd_scene load_steps=3 format=3 uid="uid://b6pt4sm1cjgr0"]

[ext_resource type="Script" path="res://scenes/player_select/player_select.gd" id="1_pe3y3"]
[ext_resource type="Texture2D" uid="uid://ct0oxtcaj33kq" path="res://assets/images/menu/playerSelectBackground.png" id="2_bw851"]

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pe3y3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_bw851")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 164.0
offset_right = 1861.0
offset_bottom = 980.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Your Loadout"

[node name="PlayerRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Addbutton1" type="Button" parent="MarginContainer/VBoxContainer/PlayerRow"]
layout_mode = 2
text = "+"

[node name="Addbutton2" type="Button" parent="MarginContainer/VBoxContainer/PlayerRow"]
layout_mode = 2
text = "+"

[node name="Addbutton3" type="Button" parent="MarginContainer/VBoxContainer/PlayerRow"]
layout_mode = 2
text = "+"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"
